log
Thu, Mar 20, 2025  6:56:21 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025  7:23:19 PM: 
 exercises.c | 46 +++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 45 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:62:24: error: implicit declaration of function 'size' [-Wimplicit-function-declaration]
   62 |    for (int i = 0; i < size(L); i++) {
      |                        ^~~~
exercises.c: In function 'parentesisBalanceados':
exercises.c:122:14: error: implicit declaration of function 'isEmpty' [-Wimplicit-function-declaration]
  122 |          if (isEmpty(P)) {
      |              ^~~~~~~
Compilation failed
cde75c2
Thu, Mar 20, 2025  7:30:09 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:62:24: error: implicit declaration of function 'size' [-Wimplicit-function-declaration]
   62 |    for (int i = 0; i < size(L); i++) {
      |                        ^~~~
exercises.c: In function 'parentesisBalanceados':
exercises.c:122:14: error: implicit declaration of function 'isEmpty' [-Wimplicit-function-declaration]
  122 |          if (isEmpty(P)) {
      |              ^~~~~~~
Compilation failed
9ed09bd
